# cmake-gecko-sdk

./: CMakeLists.txt  LICENSE  index.jlink  readme.md
application/src/: app.c  blink.c  main.c  syscall.c
autogen/: .crc_config.crc  RTE_Components.h  sl_board_default_init.c  sl_component_catalog.h  sl_device_init_clocks.c  sl_event_handler.c  sl_simple_led_instances.c  sl_simple_led_instances.h
cmake/: board.cmake  cmsis.cmake  debug.cmake  device.cmake  emdrv.cmake  emlib.cmake  services.cmake  slcommon.cmake
config/: emlib_core_debug_config.h  pin_config.h  sl_board_control_config.h  sl_debug_swo_config.h  sl_device_init_dcdc_config.h  sl_device_init_emu_config.h  sl_device_init_hfxo_config.h  sl_device_init_lfxo_config.h  sl_memory_config.h  sl_mx25_flash_shutdown_usart_config.h  sl_simple_led_led0_config.h  sl_sleeptimer_config.h
